Sticky footer is not fixed. Updated the About Me section of the About page.

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<header>Kai-Ann Fletcher</header>
+    <header>Kai-Ann Fletcher</header>
 
 <div id = right>
 <nav><span>
@@ -36,11 +36,17 @@
     <textarea rows="4" cols="50">Type message here.</textarea><br>
     <input type="submit" value="Submit">
 </form>
+
+<div class="contactpush">Copyright &copy;</div>
 </div>
 
-<div class="footer">
-    Copyright &copy; 
-</div>
+<footer class="footer"></footer>
+
+<!---<footer>
+    <div class="cell">
+      Copyright &copy; 
+    </div>
+  </footer>-->
 
 </body>
 </html>
