--- a/index.html
+++ b/index.html
@@ -11,29 +11,61 @@
 
 <body>
 
-<header>Kai-Ann Fletcher</header>
+  <header>Kai-Ann Fletcher</header>
 
-<div id = right>
-<nav><span>
-<a href="index.html">About</a>&nbsp; &nbsp;
-<a href="portfolio.html">Portfolio</a>&nbsp; &nbsp;
-<a href="contact.html">Contact</a></span>
-</nav>
-</div>
-
-<div class="container">
-    <section><h1>
-    ABOUT ME 
-    </h1></section>
-    <hr>
-    <div id = picture></div>
-    <p>TO BE COMPLETED</p>
-</div>
-<!-- Background-image: <img src="../images/circuit.png"> -->
-
-<div class="footer">
-    Copyright &copy; 
-</div>
-
-</body>
-</html>
+  <div id = right>
+  <nav><span>
+  <a href="index.html">About</a>&nbsp; &nbsp;
+  <a href="portfolio.html">Portfolio</a>&nbsp; &nbsp;
+  <a href="contact.html">Contact</a></span>
+  </nav>
+  </div>
+    
+    <div class="container">
+      <section><h1>
+      ABOUT ME 
+      </h1></section>
+      <hr>
+      <div id = picture></div>
+  
+      <h2><b>Background</b></h2>
+  
+  <p>Before I jump into what this portfolio is all about, I would like to share a little bit about myself. 
+  I attended the University of Toronto's Scarborough campus for four years while pursuing an undergraduate 
+  double-major degree in Biochemistry and Neuroscience.</p>
+  
+  <p>Programming was always more of a hobby/pastime for me before I decided that I wanted to apply it more 
+  seriously. I then switched jobs and now I provide product support for an expense management software application. 
+  Soon after that I decided to enroll in a 6-month intensive course for full-stack development at 
+  the University of Toronto! Since then, I have learned so much more than I ever would have on my own! 
+  Taking this course led to the creation of this portfolio which I will talk more about below.</p>
+  
+  <h2><b>This Portfolio</b></h2>
+  
+  <p>As I stressed previously, taking this course has been quite the learning experience. 
+  As a result, there are a lot of projects in this portfolio that are far from perfect or complete.
+  However, the best part of this experience is that with the more you learn, the more improvements 
+  you can commit to those ongoing projects - and this is what I have been progressively doing.</p>
+  
+  <p>When I first started, I truly wanted it to be a learning experience, so much of my work was less than perfect.
+  However, I already feel a significant difference in my general approach to programming and troubleshooting compared to
+  several months ago when we were basically at the starting line - and this is what truly matters to me. It's not all about having a perfect
+  portfolio from the start, but rather seeing and reflecting on the imperfections as you go along while working toward improvements that facilitate 
+  the learning process!</p>
+  
+  <p>Despite the imperfections, I am very proud of my portfolio and will continue to work toward building new projects while improving the existing ones!
+  Please see my contact page for more information and if you have any further questions, please feel free to reach out. Ideas and suggestions are most welcome! 
+  Thank you for visiting!</p>
+  
+  <div class="push">Copyright &copy;</div>
+  </div>
+  
+  <footer class="footer"></footer>
+  
+  <!--<footer>
+      <div class="cell">
+        Copyright &copy; 
+      </div>
+    </footer>-->
+  </body>
+  </html>
