--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,8 @@
 
 <header>Kai-Ann Fletcher</header>
 
+<header>Kai-Ann Fletcher</header>
+
 <div id = right>
 <nav><span>
 <a href="index.html">About</a>&nbsp; &nbsp;
@@ -30,11 +32,18 @@
     <div id = box2><section id = label2>Favourite Dishes</section></div>
     <div id = box3><section id = label3>Hobbies</section></div>
     <div id = box4><section id = label4>Skills</section></div>
-    <div id = box5><section id = label5>Favourite Books</section></div>   
+    <div id = box5><section id = label5>Favourite Books</section></div>
+
+<div class="portfoliopush">Copyright &copy;</div>
 </div>
 
-<div class="footer">
-    Copyright &copy; 
-</div>
+<footer class="footer"></footer>
+
+<!--<footer>
+    <div class="cell">
+      Copyright &copy; 
+    </div>
+  </footer>-->
+
 </body>
 </html>
